--- a/index.html
+++ b/index.html
@@ -38,14 +38,20 @@
 
             <div class="buttons-container">
                 <div class="element-1">
+                    <span class="numbers">1</span>
+                    <i class="fa-solid fa-mobile-screen-button"></i>
                     <button>Choisissez un restaurant</button>
                 </div>
 
                 <div class="element-2">
+                    <span class="numbers">2</span>
+                    <i class="fa-solid fa-list-ul"></i>
                     <button>Composez votre menu</button>
                 </div>
 
                 <div class="element-3">
+                    <span class="numbers">3</span>
+                    <i class="fa-solid fa-store"></i>
                     <button>Dégustez au restaurant</button>
                 </div>
             </div>    
@@ -65,6 +71,7 @@
                         <div class="cards-text-block">
                             <h4 class="cards-title">La palette du goût</h4>
                             <p class="cards-subtitle">Ménilmontant</p>
+                            <i class="fa-solid fa-heart"></i>
                         </div>
                     </a>
                 </div>
@@ -114,8 +121,8 @@
             <span class="title">ohmyfood</span>
 
             <ul>
-                <li>Proposer un restaurant</li>
-                <li>Devenir partenaire</li>
+                <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
+                <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
                 <li>Mentions légales</li>
                 <li>Contact</li>
             </ul>
