--- a/index.html
+++ b/index.html
@@ -21,19 +21,21 @@
 
             <div class="research-box">
                 <div class="title-research">
-                    <h3>Réservez le menu qui vous convient</h3>
-                    <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+                    <h2>Réservez le menu qui vous convient</h2>
+                    <span class="subtitle-research">
+                        <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+                    </span>
                 </div>
 
                 <div class="button-research">
-                    <button>Explorer nos restaurants</button>
+                    <button type="button">Explorer nos restaurants</button>
                 </div>
             </div>
         </section>
 
         <section id="functioning">
             <div class="title-funct">
-                <h3>Fonctionnement</h3>
+                <h2>Fonctionnement</h2>
             </div>
 
             <div class="buttons-container">
@@ -59,55 +61,58 @@
 
         <section id="restaurants">
             <div class="title-rest">
-                <h3>Restaurants</h3>
+                <h2>Restaurants</h2>
             </div>
             
             <div class="cards">
                 <div class="cards-rest">
                     <a href="#">
-                        <img class="cards-img"
+                        <img class="cards-rest__img"
                             src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                             alt="La pelette du goût">
                         <div class="cards-text-block">
                             <h4 class="cards-title">La palette du goût</h4>
                             <p class="cards-subtitle">Ménilmontant</p>
-                            <i class="fa-solid fa-heart"></i>
+                            <i class="fa-solid fa-heart fa-lg"></i>
                         </div>
                     </a>
                 </div>
 
                 <div class="cards-rest">
                     <a href="#">
-                        <img class="cards-img"
+                        <img class="cards-rest__img"
                             src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                             alt="La note enchantée">
                         <div class="cards-text-block">
                             <h4 class="cards-title">La note enchantée</h4>
                             <p class="cards-subtitle">Charonne</p>
+                            <i class="fa-solid fa-heart fa-lg"></i>
                         </div>
                     </a>
                 </div>
                 
                 <div class="cards-rest">
                     <a href="#">
-                        <img class="cards-img"
+                        <img class="cards-rest__img"
                             src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                             alt="À la française">
                         <div class="cards-text-block">
                             <h4 class="cards-title">À la française</h4>
                             <p class="cards-subtitle">Cité Rouge</p>
+                            <i class="fa-solid fa-heart fa-lg"></i>
                         </div>
                     </a>
                 </div>
 
                 <div class="cards-rest">
                     <a href="#">
-                        <img class="cards-img"
+                        <img class="cards-rest__img"
                             src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                             alt="Le délice des sens">
                         <div class="cards-text-block">
                             <h4 class="cards-title">Le délice des sens</h4>
                             <p class="cards-subtitle">Folie-Méricourt</p>
+                            <i class="fa-solid fa-heart fa-lg"></i>
                         </div>
                     </a>
                 </div>
