--- a/index.html
+++ b/index.html
@@ -15,30 +15,30 @@
         </header>
 
         <section id="research">
-            <div class="city-research">
+            <div class="research__city">
                 <i class="fa-solid fa-location-dot"></i><p>Paris, Belleville</p>
             </div>
 
-            <div class="research-box">
-                <div class="title-research">
+            <div class="research__box">
+                <div class="research__title">
                     <h2>Réservez le menu qui vous convient</h2>
-                    <span class="subtitle-research">
+                    <span class="research__subtitle">
                         <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
                     </span>
                 </div>
 
-                <div class="button-research">
+                <div class="research__btn">
                     <button type="button">Explorer nos restaurants</button>
                 </div>
             </div>
         </section>
 
         <section id="functioning">
-            <div class="title-funct">
+            <div class="functioning__title">
                 <h2>Fonctionnement</h2>
             </div>
 
-            <div class="buttons-container">
+            <div class="functioning__btn-box">
                 <div class="element-1">
                     <span class="numbers">1</span>
                     <i class="fa-solid fa-mobile-screen-button"></i>
@@ -60,7 +60,7 @@
         </section>
 
         <section id="restaurants">
-            <div class="title-rest">
+            <div class="restaurants">
                 <h2>Restaurants</h2>
             </div>
             
@@ -70,9 +70,9 @@
                         <img class="cards-rest__img"
                             src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                             alt="La pelette du goût">
-                        <div class="cards-text-block">
-                            <h4 class="cards-title">La palette du goût</h4>
-                            <p class="cards-subtitle">Ménilmontant</p>
+                        <div class="cards-rest__txt-box">
+                            <h4 class="cards-rest__title">La palette du goût</h4>
+                            <p class="cards-rest__subtitle">Ménilmontant</p>
                             <i class="fa-solid fa-heart fa-lg"></i>
                         </div>
                     </a>
@@ -83,9 +83,9 @@
                         <img class="cards-rest__img"
                             src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                             alt="La note enchantée">
-                        <div class="cards-text-block">
-                            <h4 class="cards-title">La note enchantée</h4>
-                            <p class="cards-subtitle">Charonne</p>
+                        <div class="cards-rest__txt-box">
+                            <h4 class="cards-rest__title">La note enchantée</h4>
+                            <p class="cards-rest__subtitle">Charonne</p>
                             <i class="fa-solid fa-heart fa-lg"></i>
                         </div>
                     </a>
@@ -96,9 +96,9 @@
                         <img class="cards-rest__img"
                             src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                             alt="À la française">
-                        <div class="cards-text-block">
-                            <h4 class="cards-title">À la française</h4>
-                            <p class="cards-subtitle">Cité Rouge</p>
+                        <div class="cards-rest__txt-box">
+                            <h4 class="cards-rest__title">À la française</h4>
+                            <p class="cards-rest__subtitle">Cité Rouge</p>
                             <i class="fa-solid fa-heart fa-lg"></i>
                         </div>
                     </a>
@@ -109,9 +109,9 @@
                         <img class="cards-rest__img"
                             src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                             alt="Le délice des sens">
-                        <div class="cards-text-block">
-                            <h4 class="cards-title">Le délice des sens</h4>
-                            <p class="cards-subtitle">Folie-Méricourt</p>
+                        <div class="cards-rest__txt-box">
+                            <h4 class="cards-rest__title">Le délice des sens</h4>
+                            <p class="cards-rest__subtitle">Folie-Méricourt</p>
                             <i class="fa-solid fa-heart fa-lg"></i>
                         </div>
                     </a>
@@ -120,10 +120,10 @@
         </section>
 
         <footer>
-            <div class="footer-logo">
+            <div class="footer__logo">
 
             </div>    
-            <span class="title">ohmyfood</span>
+            <span class="footer__title">ohmyfood</span>
 
             <ul>
                 <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
