Intégration et initialisation de SASS

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </section>
 
         <section id="restaurants">
-            <div class="restaurants">
+            <div class="restaurants__title">
                 <h2>Restaurants</h2>
             </div>
             
@@ -119,7 +119,7 @@
             </div>
         </section>
 
-        <footer>
+        <footer id="footer">
             <div class="footer__logo">
 
             </div>    
