--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
         <link rel="stylesheet" type="text/css" href="public/css/style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&family=Shrikhand&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/d7bb70cdb2.js" crossorigin="anonymous"></script>
         <title>ohmyfood</title>
     </head>
@@ -44,26 +43,26 @@
 
             <div class="functioning__btn-box">
                 <div class="element-1">
-                    <span class="numbers">1</span>
+                    <div class="functioning__numbers">1</div>
                     <i class="fa-solid fa-mobile-screen-button"></i>
                     <button>Choisissez un restaurant</button>
                 </div>
 
                 <div class="element-2">
-                    <span class="numbers">2</span>
+                    <div class="functioning__numbers">2</div>
                     <i class="fa-solid fa-list-ul"></i>
                     <button>Composez votre menu</button>
                 </div>
 
                 <div class="element-3">
-                    <span class="numbers">3</span>
+                    <div class="functioning__numbers">3</div>
                     <i class="fa-solid fa-store"></i>
                     <button>Dégustez au restaurant</button>
                 </div>
             </div>    
         </section>
 
-        <section id="restaurants">
+        <section class="restaurants">
             <div class="restaurants__title">
                 <h2>Restaurants</h2>
             </div>
@@ -77,7 +76,8 @@
                         <div class="cards-rest__txt-box">
                             <h4 class="cards-rest__title">La palette du goût</h4>
                             <p class="cards-rest__subtitle">Ménilmontant</p>
-                            <i class="fa-solid fa-heart fa-lg"></i>
+                            <img class="cards-rest__heart" src="images/icons/heart.svg"
+                                 alt="coeur">
                         </div>
                     </a>
                 </div>
@@ -90,7 +90,8 @@
                         <div class="cards-rest__txt-box">
                             <h4 class="cards-rest__title">La note enchantée</h4>
                             <p class="cards-rest__subtitle">Charonne</p>
-                            <i class="fa-solid fa-heart fa-lg"></i>
+                            <img class="cards-rest__heart" src="images/icons/heart.svg"
+                                 alt="coeur">
                         </div>
                     </a>
                 </div>
@@ -103,7 +104,8 @@
                         <div class="cards-rest__txt-box">
                             <h4 class="cards-rest__title">À la française</h4>
                             <p class="cards-rest__subtitle">Cité Rouge</p>
-                            <i class="fa-solid fa-heart fa-lg"></i>
+                            <img class="cards-rest__heart" src="images/icons/heart.svg"
+                                 alt="coeur">
                         </div>
                     </a>
                 </div>
@@ -116,22 +118,19 @@
                         <div class="cards-rest__txt-box">
                             <h4 class="cards-rest__title">Le délice des sens</h4>
                             <p class="cards-rest__subtitle">Folie-Méricourt</p>
-                            <i class="fa-solid fa-heart fa-lg"></i>
+                            <img class="cards-rest__heart" src="images/icons/heart.svg"
+                                 alt="coeur">
                         </div>
                     </a>
                 </div>
             </div>
         </section>
 
-        <footer id="footer">
-            <div class="footer__logo">
-
-            </div>    
-            <span class="footer__title">ohmyfood</span>
-
+        <footer>
+            <h4>ohmyfood</h4>
             <ul>
                 <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
-                <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
+                <li><i class="fa-solid fa-handshake-angle fa-xs"></i>Devenir partenaire</li>
                 <li>Mentions légales</li>
                 <li>Contact</li>
             </ul>
