--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                         <img class="cards-rest__img"
                             src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                             alt="La pelette du goût">
+                        <div class="cards-rest__new">Nouveau</div>    
                         <div class="cards-rest__txt-box">
                             <h4 class="cards-rest__title">La palette du goût</h4>
                             <p class="cards-rest__subtitle">Ménilmontant</p>
@@ -87,6 +88,7 @@
                         <img class="cards-rest__img"
                             src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                             alt="La note enchantée">
+                        <div class="cards-rest__new">Nouveau</div>       
                         <div class="cards-rest__txt-box">
                             <h4 class="cards-rest__title">La note enchantée</h4>
                             <p class="cards-rest__subtitle">Charonne</p>
