Ajout dégradé de couleurs sur le bouton 'Explorer'

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <section class="research">
             <form class="research__form" method="post" action="index.html">
-                <i class="fa-solid fa-location-dot"></i><input type="search" name="ville">
+                <i class="fa-solid fa-location-dot"></i><input type="search" name="ville" placeholder="Paris, Belleville">
             </form>
 
             <div class="research__box">
