Réalisation de la page du premier restaurant

--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
             </div>
 
             <div class="functioning__btn-box">
-                <div class="element-1">
+                <div class="element element-1">
                     <div class="functioning__numbers">1</div>
                     <i class="fa-solid fa-mobile-screen-button"></i>
                     <button>Choisissez un restaurant</button>
                 </div>
 
-                <div class="element-2">
+                <div class="element element-2">
                     <div class="functioning__numbers">2</div>
                     <i class="fa-solid fa-list-ul"></i>
                     <button>Composez votre menu</button>
                 </div>
 
-                <div class="element-3">
+                <div class="element element-3">
                     <div class="functioning__numbers">3</div>
                     <i class="fa-solid fa-store"></i>
                     <button>Dégustez au restaurant</button>
@@ -69,10 +69,10 @@
             
             <div class="cards">
                 <div class="cards-rest">
-                    <a href="#">
+                    <a href="rest1.html">
                         <img class="cards-rest__img"
                             src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                            alt="La pelette du goût">
+                            alt="La palette du goût">
                         <div class="cards-rest__new">Nouveau</div>    
                         <div class="cards-rest__txt-box">
                             <h4 class="cards-rest__title">La palette du goût</h4>
