--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
 
                 <div class="cards-rest">
-                    <a href="#">
+                    <a href="rest2.html">
                         <img class="cards-rest__img"
                             src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                             alt="La note enchantée">
@@ -99,7 +99,7 @@
                 </div>
                 
                 <div class="cards-rest">
-                    <a href="#">
+                    <a href="rest3.html">
                         <img class="cards-rest__img"
                             src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                             alt="À la française">
@@ -113,7 +113,7 @@
                 </div>
 
                 <div class="cards-rest">
-                    <a href="#">
+                    <a href="rest4.html">
                         <img class="cards-rest__img"
                             src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                             alt="Le délice des sens">
