--- a/index.html
+++ b/index.html
@@ -42,23 +42,23 @@
             </div>
 
             <div class="functioning__btn-box">
-                <div class="element element-1">
+                <button class="element element-1">
                     <div class="functioning__numbers">1</div>
                     <i class="fa-solid fa-mobile-screen-button"></i>
-                    <button>Choisissez un restaurant</button>
-                </div>
+                    <h4>Choisissez un restaurant</h4>
+                </button>
 
-                <div class="element element-2">
+                <button class="element element-2">
                     <div class="functioning__numbers">2</div>
                     <i class="fa-solid fa-list-ul"></i>
-                    <button>Composez votre menu</button>
-                </div>
+                    <h4>Composez votre menu</h4>
+                </button>
 
-                <div class="element element-3">
+                <button class="element element-3">
                     <div class="functioning__numbers">3</div>
                     <i class="fa-solid fa-store"></i>
-                    <button>Dégustez au restaurant</button>
-                </div>
+                    <h4>Dégustez au restaurant</h4>
+                </button>
             </div>    
         </section>
 
@@ -77,8 +77,7 @@
                         <div class="cards-rest__txt-box">
                             <h4 class="cards-rest__title">La palette du goût</h4>
                             <p class="cards-rest__subtitle">Ménilmontant</p>
-                            <img class="cards-rest__heart" src="images/icons/heart.svg"
-                                 alt="coeur">
+                            <i class="fa-solid fa-heart fa-lg"></i>
                         </div>
                     </a>
                 </div>
@@ -92,8 +91,7 @@
                         <div class="cards-rest__txt-box">
                             <h4 class="cards-rest__title">La note enchantée</h4>
                             <p class="cards-rest__subtitle">Charonne</p>
-                            <img class="cards-rest__heart" src="images/icons/heart.svg"
-                                 alt="coeur">
+                            <i class="fa-solid fa-heart"></i>
                         </div>
                     </a>
                 </div>
@@ -106,8 +104,7 @@
                         <div class="cards-rest__txt-box">
                             <h4 class="cards-rest__title">À la française</h4>
                             <p class="cards-rest__subtitle">Cité Rouge</p>
-                            <img class="cards-rest__heart" src="images/icons/heart.svg"
-                                 alt="coeur">
+                            <i class="fa-solid fa-heart"></i>
                         </div>
                     </a>
                 </div>
@@ -120,8 +117,7 @@
                         <div class="cards-rest__txt-box">
                             <h4 class="cards-rest__title">Le délice des sens</h4>
                             <p class="cards-rest__subtitle">Folie-Méricourt</p>
-                            <img class="cards-rest__heart" src="images/icons/heart.svg"
-                                 alt="coeur">
+                            <i class="fa-solid fa-heart"></i>
                         </div>
                     </a>
                 </div>
