--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     </head>
 
     <body>
+        <!--HEADER-->
         <header>
             <img src="images/logo/ohmyfood.png" alt="ohmyfood">
         </header>
 
+        <!--RECHERCHE-->
         <section class="research">
             <form class="research__form" method="post" action="index.html">
                 <i class="fa-solid fa-location-dot"></i><input type="search" name="ville" placeholder="Paris, Belleville">
@@ -36,6 +38,7 @@
             </div>
         </section>
 
+        <!--FONCTIONNEMENT-->
         <section class="functioning">
             <div class="functioning__title">
                 <h2>Fonctionnement</h2>
@@ -62,6 +65,7 @@
             </div>    
         </section>
 
+        <!--LISTE DES RESTAURANTS-->
         <section class="restaurants">
             <div class="restaurants__title">
                 <h2>Restaurants</h2>
@@ -73,11 +77,11 @@
                         <img class="cards-rest__img"
                             src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                             alt="La palette du goût">
-                        <div class="cards-rest__new">Nouveau</div>    
                         <div class="cards-rest__txt-box">
                             <h4 class="cards-rest__title">La palette du goût</h4>
                             <p class="cards-rest__subtitle">Ménilmontant</p>
                             <i class="fa-solid fa-heart fa-lg"></i>
+                            <div class="cards-rest__new">Nouveau</div>
                         </div>
                     </a>
                 </div>
@@ -86,12 +90,12 @@
                     <a href="rest2.html">
                         <img class="cards-rest__img"
                             src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                            alt="La note enchantée">
-                        <div class="cards-rest__new">Nouveau</div>       
+                            alt="La note enchantée">     
                         <div class="cards-rest__txt-box">
                             <h4 class="cards-rest__title">La note enchantée</h4>
                             <p class="cards-rest__subtitle">Charonne</p>
                             <i class="fa-solid fa-heart"></i>
+                            <div class="cards-rest__new">Nouveau</div>  
                         </div>
                     </a>
                 </div>
@@ -124,6 +128,7 @@
             </div>
         </section>
 
+        <!--FOOTER-->
         <footer>
             <h4>ohmyfood</h4>
             <ul>
