--- a/rest1.html
+++ b/rest1.html
@@ -13,6 +13,7 @@
     </head>
 
     <body>
+        <!--HEADER-->
         <header class="header-rest">
             <div class="header-rest__box">
                 <a href="./index.html">
@@ -25,6 +26,7 @@
                     alt="La palette du goût">
         </header>
 
+        <!--MENU-->
         <section class="menu">
             <div class="menu__title">
                 <h1>La palette du goût</h1>
@@ -100,6 +102,7 @@
             
         </section>
         
+        <!--FOOTER-->
         <footer>
             <h4>ohmyfood</h4>
             <ul>
