--- a/rest2.html
+++ b/rest2.html
@@ -13,6 +13,7 @@
     </head>
 
     <body>
+        <!--HEADER-->
         <header class="header-rest">
             <div class="header-rest__box">
                 <a href="./index.html">
@@ -25,6 +26,7 @@
                     alt="La note enchantée">
         </header>
 
+        <!--MENU-->
         <section class="menu">
             <div class="menu__title">
                 <h1>La note enchantée</h1>
@@ -33,25 +35,25 @@
 
             <h4 class="menu__subtitle">ENTRÉES</h4>
             <div class="menu__box">
-                <button class="menu__box--btn">
+                <button class="menu__box--btn" class="--child-1">
                     <p class="menu__box--plat">Ravioles de foie gras</p>
                     <p class="menu__box--misc">Accompagnés de leur crème à la truffe</p>
                     <p class="menu__box--prix">25€</p>
                 </button>
 
-                <button class="menu__box--btn">
+                <button class="menu__box--btn" class="--child-2">
                     <p class="menu__box--plat">Caviar osciètre</p>
                     <p class="menu__box--misc">Sur blini à la farine de blé noir</p>
                     <p class="menu__box--prix">35€</p>
                 </button>
 
-                <button class="menu__box--btn">
+                <button class="menu__box--btn" class="--child-3">
                     <p class="menu__box--plat">Homard et espuma de langoustines</p>
                     <p class="menu__box--misc">Mariné aux zests d'orange</p>
                     <p class="menu__box--prix">20€</p>
                 </button>
 
-                <button class="menu__box--btn">
+                <button class="menu__box--btn" class="--child-4">
                     <p class="menu__box--plat">Foie gras de canard cuit entier</p>
                     <p class="menu__box--misc">Confiture de figue et pain toasté</p>
                     <p class="menu__box--prix">35€</p>
@@ -106,6 +108,7 @@
             
         </section>
         
+        <!--FOOTER-->
         <footer>
             <h4>ohmyfood</h4>
             <ul>
