--- a/rest1.html
+++ b/rest1.html
@@ -37,20 +37,26 @@
             <div class="menu__box">
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Fricassée d'escargots</p>
-                    <p class="menu__box--misc">Au piment d'espelette</p>
-                    <p class="menu__box--prix">25€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Au piment d'espelette</p>
+                        <p class="menu__box--prix">25€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Foie gras de canard mi-cuit</p>
-                    <p class="menu__box--misc">Et ses copeaux de truffe noire</p>
-                    <p class="menu__box--prix">35€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Et ses copeaux de truffe noire</p>
+                        <p class="menu__box--prix">35€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Oeuf au plat</p>
-                    <p class="menu__box--misc">Assaisonné à la truffe sur lit de caviar</p>
-                    <p class="menu__box--prix">20€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Assaisonné à la truffe sur lit de caviar</p>
+                        <p class="menu__box--prix">20€</p>
+                    </div>
                 </button>
             </div>
 
@@ -58,20 +64,26 @@
             <div class="menu__box">
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Filet de boeuf aux herbes</p>
-                    <p class="menu__box--misc">Accompagné de sa ribambelle de légumes</p>
-                    <p class="menu__box--prix">40€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Accompagné de sa ribambelle de légumes</p>
+                        <p class="menu__box--prix">40€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Parmentier de queue de boeuf</p>
-                    <p class="menu__box--misc">À la truffe noire sur sa purée de panais</p>
-                    <p class="menu__box--prix">35€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">À la truffe noire sur sa purée de panais</p>
+                        <p class="menu__box--prix">35€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Filet de Turbot</p>
-                    <p class="menu__box--misc">Aux agrumes</p>
-                    <p class="menu__box--prix">44€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Aux agrumes</p>
+                        <p class="menu__box--prix">44€</p>
+                    </div>
                 </button>
             </div>
 
@@ -79,20 +91,26 @@
             <div class="menu__box">
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Paris-Brest</p>
-                    <p class="menu__box--misc">Revisité</p>
-                    <p class="menu__box--prix">18€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Revisité</p>
+                        <p class="menu__box--prix">18€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Macaron au chocolat d'exception</p>
-                    <p class="menu__box--misc">Et la glace à la vanille de Madagascar</p>
-                    <p class="menu__box--prix">22€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Et la glace à la vanille de Madagascar</p>
+                        <p class="menu__box--prix">22€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Mousse au chocolat</p>
-                    <p class="menu__box--misc">Au piment d'espelette et à la truffe noire</p>
-                    <p class="menu__box--prix">23€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Au piment d'espelette et à la truffe noire</p>
+                        <p class="menu__box--prix">23€</p>
+                    </div>
                 </button>
             </div>  
 
