MAJ animations menu

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     <body>
             <!-- BARRE DE CHARGEMENT -->
             <div id="progress">
-                <div id="progress__bar"></div>
+                <div id="progress__bar">
+                    <p>Chargement</p>
+                </div>
             </div>
             <!--HEADER-->
-            <header>
+            <header class="loading_header">
                 <img src="images/logo/ohmyfood.png" alt="ohmyfood">
             </header>
 
@@ -133,7 +135,7 @@
             </section>
 
             <!--FOOTER-->
-            <footer>
+            <footer class="loading_footer">
                 <h4>ohmyfood</h4>
                 <ul>
                     <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
