--- a/rest3.html
+++ b/rest3.html
@@ -37,20 +37,26 @@
             <div class="menu__box">
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Tartare de poulpe acidulé</p>
-                    <p class="menu__box--misc">Aux zests d'orange</p>
-                    <p class="menu__box--prix">25€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Aux zests d'orange</p>
+                        <p class="menu__box--prix">25€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Velouté de légumes d'antan</p>
-                    <p class="menu__box--misc">Carotte, panais, topinambour</p>
-                    <p class="menu__box--prix">35€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Carotte, panais, topinambour</p>
+                        <p class="menu__box--prix">35€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Soupe à l'oignon</p>
-                    <p class="menu__box--misc">Revisitée</p>
-                    <p class="menu__box--prix">20€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Revisitée</p>
+                        <p class="menu__box--prix">20€</p>
+                    </div>
                 </button>
             </div>
 
@@ -58,41 +64,53 @@
             <div class="menu__box">
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Coquilles Saint-Jacques</p>
-                    <p class="menu__box--misc">Accompagnées d'une purée de panais</p>
-                    <p class="menu__box--prix">40€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Accompagnées d'une purée de panais</p>
+                        <p class="menu__box--prix">40€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Magret de canard</p>
-                    <p class="menu__box--misc">Et parmentier de pommes de terres</p>
-                    <p class="menu__box--prix">35€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Et parmentier de pommes de terres</p>
+                        <p class="menu__box--prix">35€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Pigeonneau d'Ille-et-Vilaine</p>
-                    <p class="menu__box--misc">sur son lit de gnocchis aux légumes</p>
-                    <p class="menu__box--prix">44€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">sur son lit de gnocchis aux légumes</p>
+                        <p class="menu__box--prix">44€</p>
+                    </div>
                 </button>
             </div>
 
             <h4 class="menu__subtitle">DESSERTS</h4>
             <div class="menu__box">
                 <button class="menu__box--btn">
-                    <p class="menu__box--plat">Pétales de ciolettes glacés</p>
-                    <p class="menu__box--misc">Et purée de noisettes</p>
-                    <p class="menu__box--prix">18€</p>
+                    <p class="menu__box--plat">Pétales de violettes glacés</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Et purée de noisettes</p>
+                        <p class="menu__box--prix">18€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Fondant au chocolat</p>
-                    <p class="menu__box--misc">Revisité</p>
-                    <p class="menu__box--prix">22€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Revisité</p>
+                        <p class="menu__box--prix">22€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Millefeuille au chocolat</p>
-                    <p class="menu__box--misc">Myrtilles et pâte d'amande</p>
-                    <p class="menu__box--prix">23€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Myrtilles et pâte d'amande</p>
+                        <p class="menu__box--prix">23€</p>
+                    </div>
                 </button>
             </div>  
 
