--- a/rest2.html
+++ b/rest2.html
@@ -37,26 +37,34 @@
             <div class="menu__box">
                 <button class="menu__box--btn" class="--child-1">
                     <p class="menu__box--plat">Ravioles de foie gras</p>
-                    <p class="menu__box--misc">Accompagnés de leur crème à la truffe</p>
-                    <p class="menu__box--prix">25€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Accompagnés de leur crème à la truffe</p>
+                        <p class="menu__box--prix">25€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn" class="--child-2">
                     <p class="menu__box--plat">Caviar osciètre</p>
-                    <p class="menu__box--misc">Sur blini à la farine de blé noir</p>
-                    <p class="menu__box--prix">35€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Sur blini à la farine de blé noir</p>
+                        <p class="menu__box--prix">35€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn" class="--child-3">
                     <p class="menu__box--plat">Homard et espuma de langoustines</p>
-                    <p class="menu__box--misc">Mariné aux zests d'orange</p>
-                    <p class="menu__box--prix">20€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Mariné aux zests d'orange</p>
+                        <p class="menu__box--prix">20€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn" class="--child-4">
                     <p class="menu__box--plat">Foie gras de canard cuit entier</p>
-                    <p class="menu__box--misc">Confiture de figue et pain toasté</p>
-                    <p class="menu__box--prix">35€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Confiture de figue et pain toasté</p>
+                        <p class="menu__box--prix">35€</p>
+                    </div>
                 </button>
             </div>
 
@@ -64,20 +72,26 @@
             <div class="menu__box">
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Noix de coquilles Saint-Jacques</p>
-                    <p class="menu__box--misc">Sur lit de purée de céleri-rave</p>
-                    <p class="menu__box--prix">40€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Sur lit de purée de céleri-rave</p>
+                        <p class="menu__box--prix">40€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Langoustine poêlée</p>
-                    <p class="menu__box--misc">Purée de patate douce</p>
-                    <p class="menu__box--prix">35€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Purée de patate douce</p>
+                        <p class="menu__box--prix">35€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Mijoté de queue de boeuf</p>
-                    <p class="menu__box--misc">Et riz sauvage aux zests de citron</p>
-                    <p class="menu__box--prix">44€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Et riz sauvage aux zests de citron</p>
+                        <p class="menu__box--prix">44€</p>
+                    </div>
                 </button>
             </div>
 
@@ -85,20 +99,26 @@
             <div class="menu__box">
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Macaron noisette et chocolat</p>
-                    <p class="menu__box--misc">Glace au caramel brun et sel de Guérande</p>
-                    <p class="menu__box--prix">18€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Glace au caramel brun et sel de Guérande</p>
+                        <p class="menu__box--prix">18€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Baba au rhum revisité</p>
-                    <p class="menu__box--misc">Avec son coulis de citron</p>
-                    <p class="menu__box--prix">22€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Avec son coulis de citron</p>
+                        <p class="menu__box--prix">22€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Tarte au citron meringuée</p>
-                    <p class="menu__box--misc">Destructurée</p>
-                    <p class="menu__box--prix">23€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Destructurée</p>
+                        <p class="menu__box--prix">23€</p>
+                    </div>
                 </button>
             </div>  
 
