--- a/rest4.html
+++ b/rest4.html
@@ -37,20 +37,26 @@
             <div class="menu__box">
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Tartare de thon</p>
-                    <p class="menu__box--misc">Assaisonné de yuzu</p>
-                    <p class="menu__box--prix">25€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Assaisonné de yuzu</p>
+                        <p class="menu__box--prix">25€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Bouchée de homard croustillant</p>
-                    <p class="menu__box--misc">Et sa farandole de petits légumes</p>
-                    <p class="menu__box--prix">35€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Et sa farandole de petits légumes</p>
+                        <p class="menu__box--prix">35€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Velouté de cèpes</p>
-                    <p class="menu__box--misc">Aux truffes</p>
-                    <p class="menu__box--prix">20€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Aux truffes</p>
+                        <p class="menu__box--prix">20€</p>
+                    </div>
                 </button>
             </div>
 
@@ -58,20 +64,26 @@
             <div class="menu__box">
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Poulet rôti aux herbes de provence</p>
-                    <p class="menu__box--misc">Et sa crème de truffe</p>
-                    <p class="menu__box--prix">40€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Et sa crème de truffe</p>
+                        <p class="menu__box--prix">40€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Langouste rôtie</p>
-                    <p class="menu__box--misc">Et ses légumes de saison</p>
-                    <p class="menu__box--prix">35€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Et ses légumes de saison</p>
+                        <p class="menu__box--prix">35€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Côte de boeuf angus</p>
-                    <p class="menu__box--misc">Et sa purée de panais</p>
-                    <p class="menu__box--prix">44€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Et sa purée de panais</p>
+                        <p class="menu__box--prix">44€</p>
+                    </div>
                 </button>
             </div>
 
@@ -79,20 +91,26 @@
             <div class="menu__box">
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Farandole de desserts</p>
-                    <p class="menu__box--misc">Du chef</p>
-                    <p class="menu__box--prix">18€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Du chef</p>
+                        <p class="menu__box--prix">18€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Crème brulée</p>
-                    <p class="menu__box--misc">Revisitée</p>
-                    <p class="menu__box--prix">22€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">Revisitée</p>
+                        <p class="menu__box--prix">22€</p>
+                    </div>
                 </button>
 
                 <button class="menu__box--btn">
                     <p class="menu__box--plat">Tiramisu</p>
-                    <p class="menu__box--misc">À la noisette</p>
-                    <p class="menu__box--prix">23€</p>
+                    <div class="menu__box--content">
+                        <p class="menu__box--misc">À la noisette</p>
+                        <p class="menu__box--prix">23€</p>
+                    </div>
                 </button>
             </div>  
 
