Changement animation chargement page principale

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     <body>
             <!-- BARRE DE CHARGEMENT -->
             <div id="progress">
-                <div id="progress__bar">
-                    <p>Chargement</p>
-                </div>
+                <div id="progress__bar"></div>
             </div>
             <!--HEADER-->
             <header class="loading_header">
