Ajouts de commentaires dans le CSS et Début de l'animation MENU

--- a/rest1.html
+++ b/rest1.html
@@ -40,6 +40,9 @@
                     <div class="menu__box--content">
                         <p class="menu__box--misc">Au piment d'espelette</p>
                         <p class="menu__box--prix">25€</p>
+                        <div class="menu__box--validate">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
                     </div>
                 </button>
 
