Ajout animation validation plat

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <!--HEADER-->
             <header class="loading_header">
-                <img src="images/logo/ohmyfood.png" alt="ohmyfood">
+                <img src="images/logo/ohmyfood@2x.svg" alt="ohmyfood">
             </header>
 
             <!--RECHERCHE-->
