--- a/rest1.html
+++ b/rest1.html
@@ -19,7 +19,7 @@
                 <a href="./index.html">
                     <i class="fa-solid fa-arrow-left"></i>
                 </a>
-                <img class="header-rest__logo" src="/images/logo/ohmyfood.png" alt="ohmyfood">
+                <img class="header-rest__logo" src="/images/logo/ohmyfood@2x.svg" alt="ohmyfood">
             </div>    
             <img class="header-rest__img"
                     src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
@@ -35,90 +35,112 @@
 
             <h4 class="menu__subtitle">ENTRÉES</h4>
             <div class="menu__box">
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Fricassée d'escargots</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Au piment d'espelette</p>
-                        <p class="menu__box--prix">25€</p>
-                        <div class="menu__box--validate">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        <p class="menu__box--plat">Fricassée d'escargots</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Au piment d'espelette</p>
+                            <p class="menu__box--prix">25€</p>
+                        </div>      
+                    </div>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
+
+                <a href="#" class="menu__box--btn">
+                    <div class="menu__box--content">
+                        <p class="menu__box--plat">Foie gras de canard mi-cuit</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Et ses copeaux de truffe noire</p>
+                            <p class="menu__box--prix">35€</p>
                         </div>
                     </div>
-                </button>
+                </a>
 
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Foie gras de canard mi-cuit</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Et ses copeaux de truffe noire</p>
-                        <p class="menu__box--prix">35€</p>
+                        <p class="menu__box--plat">Oeuf au plat</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Assaisonné à la truffe sur lit de caviar</p>
+                            <p class="menu__box--prix">20€</p>
+                        </div>
                     </div>
-                </button>
-
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Oeuf au plat</p>
-                    <div class="menu__box--content">
-                        <p class="menu__box--misc">Assaisonné à la truffe sur lit de caviar</p>
-                        <p class="menu__box--prix">20€</p>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
                     </div>
-                </button>
+                </a>
             </div>
 
             <h4 class="menu__subtitle">PLATS</h4>
             <div class="menu__box">
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Filet de boeuf aux herbes</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Accompagné de sa ribambelle de légumes</p>
-                        <p class="menu__box--prix">40€</p>
+                        <p class="menu__box--plat">Filet de boeuf aux herbes</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Accompagné de sa ribambelle de légumes</p>
+                            <p class="menu__box--prix">40€</p>
+                        </div>
                     </div>
-                </button>
+                </a>
 
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Parmentier de queue de boeuf</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">À la truffe noire sur sa purée de panais</p>
-                        <p class="menu__box--prix">35€</p>
+                        <p class="menu__box--plat">Parmentier de queue de boeuf</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">À la truffe noire sur sa purée de panais</p>
+                            <p class="menu__box--prix">35€</p>
+                        </div>
                     </div>
-                </button>
+                </a>
 
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Filet de Turbot</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Aux agrumes</p>
-                        <p class="menu__box--prix">44€</p>
+                        <p class="menu__box--plat">Filet de Turbot</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Aux agrumes</p>
+                            <p class="menu__box--prix">44€</p>
+                        </div>
                     </div>
-                </button>
+                </a>
             </div>
 
             <h4 class="menu__subtitle">DESSERTS</h4>
             <div class="menu__box">
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Paris-Brest</p>
-                    <div class="menu__box--content">
-                        <p class="menu__box--misc">Revisité</p>
-                        <p class="menu__box--prix">18€</p>
-                    </div>
-                </button>
 
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Macaron au chocolat d'exception</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Et la glace à la vanille de Madagascar</p>
-                        <p class="menu__box--prix">22€</p>
+                        <p class="menu__box--plat">Paris-Brest</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Revisité</p>
+                            <p class="menu__box--prix">18€</p>
+                        </div>
                     </div>
-                </button>
+                </a>
 
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Mousse au chocolat</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Au piment d'espelette et à la truffe noire</p>
-                        <p class="menu__box--prix">23€</p>
+                        <p class="menu__box--plat">Macaron au chocolat d'exception</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Et la glace à la vanille de Madagascar</p>
+                            <p class="menu__box--prix">22€</p>
+                        </div>
                     </div>
-                </button>
+                </a>
+
+                <a href="#" class="menu__box--btn">
+                    <div class="menu__box--content">
+                        <p class="menu__box--plat">Mousse au chocolat</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Au piment d'espelette et à la truffe noire</p>
+                            <p class="menu__box--prix">35€</p>
+                        </div>
+                    </div>
+                </a>    
             </div>  
 
             <div class="order">
-                <button class="order--btn">Commander</button>
+                <a class="order--btn">Commander</a>
             </div>
             
         </section>
