--- a/rest2.html
+++ b/rest2.html
@@ -19,7 +19,7 @@
                 <a href="./index.html">
                     <i class="fa-solid fa-arrow-left"></i>
                 </a>
-                <img class="header-rest__logo" src="/images/logo/ohmyfood.png" alt="ohmyfood">
+                <img class="header-rest__logo" src="/images/logo/ohmyfood@2x.svg" alt="ohmyfood">
             </div>    
             <img class="header-rest__img"
                     src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
