Animation du coeur

--- a/index.html
+++ b/index.html
@@ -84,7 +84,14 @@
                             <div class="cards-rest__txt-box">
                                 <h4 class="cards-rest__title">La palette du goût</h4>
                                 <p class="cards-rest__subtitle">Ménilmontant</p>
-                                <i class="fa-solid fa-heart fa-lg"></i>
+                                <div class="icons">
+                                    <svg class="heart_main" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                                        <path d="M14.75 1A5.24 5.24 0 0 0 10 4 5.24 5.24 0 0 0 0 6.25C0 11.75 10 19 10 19s10-7.25 10-12.75A5.25 5.25 0 0 0 14.75 1z"/>
+                                    </svg>
+                                    <svg class="heart_background" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                                        <path d="M14.75 1A5.24 5.24 0 0 0 10 4 5.24 5.24 0 0 0 0 6.25C0 11.75 10 19 10 19s10-7.25 10-12.75A5.25 5.25 0 0 0 14.75 1z"/>
+                                    </svg>
+                                </div>
                                 <div class="cards-rest__new">Nouveau</div>
                             </div>
                         </a>
@@ -98,7 +105,14 @@
                             <div class="cards-rest__txt-box">
                                 <h4 class="cards-rest__title">La note enchantée</h4>
                                 <p class="cards-rest__subtitle">Charonne</p>
-                                <i class="fa-solid fa-heart"></i>
+                                <div class="icons">
+                                    <svg class="heart_main" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                                        <path d="M14.75 1A5.24 5.24 0 0 0 10 4 5.24 5.24 0 0 0 0 6.25C0 11.75 10 19 10 19s10-7.25 10-12.75A5.25 5.25 0 0 0 14.75 1z"/>
+                                    </svg>
+                                    <svg class="heart_background" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                                        <path d="M14.75 1A5.24 5.24 0 0 0 10 4 5.24 5.24 0 0 0 0 6.25C0 11.75 10 19 10 19s10-7.25 10-12.75A5.25 5.25 0 0 0 14.75 1z"/>
+                                    </svg>
+                                </div>
                                 <div class="cards-rest__new">Nouveau</div>  
                             </div>
                         </a>
@@ -112,7 +126,14 @@
                             <div class="cards-rest__txt-box">
                                 <h4 class="cards-rest__title">À la française</h4>
                                 <p class="cards-rest__subtitle">Cité Rouge</p>
-                                <i class="fa-solid fa-heart"></i>
+                                <div class="icons">
+                                    <svg class="heart_main" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                                        <path d="M14.75 1A5.24 5.24 0 0 0 10 4 5.24 5.24 0 0 0 0 6.25C0 11.75 10 19 10 19s10-7.25 10-12.75A5.25 5.25 0 0 0 14.75 1z"/>
+                                    </svg>
+                                    <svg class="heart_background" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                                        <path d="M14.75 1A5.24 5.24 0 0 0 10 4 5.24 5.24 0 0 0 0 6.25C0 11.75 10 19 10 19s10-7.25 10-12.75A5.25 5.25 0 0 0 14.75 1z"/>
+                                    </svg>
+                                </div>
                             </div>
                         </a>
                     </div>
@@ -125,7 +146,14 @@
                             <div class="cards-rest__txt-box">
                                 <h4 class="cards-rest__title">Le délice des sens</h4>
                                 <p class="cards-rest__subtitle">Folie-Méricourt</p>
-                                <i class="fa-solid fa-heart"></i>
+                                <div class="icons">
+                                    <svg class="heart_main" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                                        <path d="M14.75 1A5.24 5.24 0 0 0 10 4 5.24 5.24 0 0 0 0 6.25C0 11.75 10 19 10 19s10-7.25 10-12.75A5.25 5.25 0 0 0 14.75 1z"/>
+                                    </svg>
+                                    <svg class="heart_background" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                                        <path d="M14.75 1A5.24 5.24 0 0 0 10 4 5.24 5.24 0 0 0 0 6.25C0 11.75 10 19 10 19s10-7.25 10-12.75A5.25 5.25 0 0 0 14.75 1z"/>
+                                    </svg>
+                                </div>
                             </div>
                         </a>
                     </div>
