--- a/rest1.html
+++ b/rest1.html
@@ -56,6 +56,9 @@
                             <p class="menu__box--prix">35€</p>
                         </div>
                     </div>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
                 </a>
 
                 <a href="#" class="menu__box--btn">
@@ -82,6 +85,9 @@
                             <p class="menu__box--prix">40€</p>
                         </div>
                     </div>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
                 </a>
 
                 <a href="#" class="menu__box--btn">
@@ -92,6 +98,9 @@
                             <p class="menu__box--prix">35€</p>
                         </div>
                     </div>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
                 </a>
 
                 <a href="#" class="menu__box--btn">
@@ -101,6 +110,9 @@
                             <p class="menu__box--misc">Aux agrumes</p>
                             <p class="menu__box--prix">44€</p>
                         </div>
+                    </div>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
                     </div>
                 </a>
             </div>
@@ -116,6 +128,9 @@
                             <p class="menu__box--prix">18€</p>
                         </div>
                     </div>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
                 </a>
 
                 <a href="#" class="menu__box--btn">
@@ -126,6 +141,9 @@
                             <p class="menu__box--prix">22€</p>
                         </div>
                     </div>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
                 </a>
 
                 <a href="#" class="menu__box--btn">
@@ -135,6 +153,9 @@
                             <p class="menu__box--misc">Au piment d'espelette et à la truffe noire</p>
                             <p class="menu__box--prix">35€</p>
                         </div>
+                    </div>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
                     </div>
                 </a>    
             </div>  
